--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@uiw/react-markdown-preview": "^4.1.13",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
